tests/baselines/reference/typeOfThisInConstructorParamList.errors.txt
tests/cases/conformance/expressions/thisKeyword/typeOfThisInConstructorParamList.ts(4,21): error TS2333: 'this' cannot be referenced in constructor arguments.


==== tests/cases/conformance/expressions/thisKeyword/typeOfThisInConstructorParamList.ts (1 errors) ====
    //type of 'this' in constructor param list is the class instance type (error)
    class ErrClass {
        // Should be an error
        constructor(f = this) { }
                        ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
    }
    